done lab 4 part 1

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "04e808c8-fa17-4309-85ce-1b50ad26175b",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.000024264789118\n"
+      "0.993057905121705\n",
+      "99\n"
      ]
     }
    ],
@@ -85,9 +86,10 @@
     "f = np.power(2,x)\n",
     "g = np.power(0.5,x)\n",
     "tol = 1.5e-2\n",
-    "x0 = None\n",
-    "y0 = np.mean(g[(np.abs(f - g) < tol)] )\n",
-    "print(y0)"
+    "y0 = np.min(g[(np.abs(f - g) < tol)] )\n",
+    "x0 = np.argmin(np.abs(y0 - f))\n",
+    "print(y0)\n",
+    "print(x0)"
    ]
   },
   {
